# llamaindex_playground

./: .env.example  .env.example.cpu  .env.example.gpu  .gitignore  CODE_REVIEW_PLAN.md  Makefile  QUICKSTART.md  README.md  REFACTOR_PLAN.md  TESTING.md  TEST_MIGRATION_STATUS.md  demo_free_vs_paid.py  pyproject.toml  quick_test.py  requirements.txt  run_tests.py  test_api.py  test_index_go.py  test_indexer.py  test_query.py
docs/: DOCUMENTATION_UPDATE_SUMMARY.md  EMPTY_RESPONSE_FIX.md  FREE_QUERY_MODE.md  NOMIC_EMBED_FIX_SUMMARY.md  PHASE2_COMPLETE.md  PHASE3_PROGRESS.md  PHASE4_PROGRESS.md  README.md  REPOSITORY_CLEANUP.md
src/: __init__.py  app_factory.py  code_chunking.py  code_extractors.py  code_query_engine.py  config.py  environment.py  file_handlers.py  free_query_mode.py  main.py
src/cli/: indexer_cli.py
src/config/: __init__.py  chunking_config.py  embedding_config.py  env_parser.py  extraction_config.py  file_categorizer.py  file_filter_config.py  indexer_config.py  language_detector.py  query_config.py
src/domain/: __init__.py  code_chunk.py  code_metadata.py  file_metadata.py
src/embedding/: __init__.py  embedding_factory.py
src/indexing/: __init__.py  indexing_orchestrator.py  progress_tracker.py
src/llm/: __init__.py  custom_openai.py  llm_configurer.py
src/loading/: __init__.py  document_loader.py
src/strategies/: __init__.py
src/strategies/chunking/: __init__.py  base.py  go_chunker.py  java_chunker.py  javascript_chunker.py  python_chunker.py  registry.py
src/strategies/extraction/: __init__.py  base.py  go_extractor.py  java_extractor.py  javascript_extractor.py  python_extractor.py  registry.py
test_data/sample_code/: calculator.py  user_service.js
test_data/sample_docs/: README.md
tests/: __init__.py  test_index_go.py  test_indexer.py  test_indexer_config_bridge.py  test_query.py
tests/old/: test_env_validation.py  test_index_go.py  test_indexer.py  test_query.py
tests/unit/: __init__.py  conftest.py  test_code_chunking.py  test_code_extractors.py  test_code_query_engine.py  test_config.py  test_embeddings_initialization.py  test_file_handlers.py  test_indexer_refactored.py  test_indexing_orchestrator.py
tests/unit/config/: test_chunking_config.py  test_embedding_config.py  test_env_parser.py  test_extraction_config.py  test_file_categorizer.py  test_language_detector.py
