[tool.black]
line-length = 88
target-version = ['py312']

[tool.pylint.messages_control]
max-line-length = 88
disable = ["C0111", "C0103"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term"
norecursedirs = ["tests/old", ".*", "build", "dist", "venv", ".venv"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/node_modules", "**/__pycache__", "venv", ".venv", "build", "dist"]
ignore = []
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "All"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportPrivateUsage = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportImplicitStringConcatenation = "none"
reportUnsupportedDunderAll = "warning"
reportUnusedCallResult = "none"
reportUntypedFunctionDecorator = "none"
reportUntypedClassDecorator = "none"
reportUntypedBaseClass = "none"

[project]
name = "llamaindex_playground"
version = "0.1.0"
description = "LlamaIndex-based project for handling business logic with Claude"
requires-python = ">=3.11"
dependencies = [
    "llama-index",
    "llama-index-core",
    "llama-index-llms-openai",
    "llama-index-embeddings-openai",
    "llama-index-embeddings-huggingface",
    "chromadb",
    "python-dotenv",
    "requests",
    "gitpython"
]

[project.optional-dependencies]
dev = ["black", "pylint", "pytest", "pytest-cov"]
